Adding image functionality

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
 
 
-<script src="main.js"></script>
+
 
 <head>
+  <script src="main.js"></script>
+  <link rel="stylesheet" href="styles.css">
   <title>UI Survey</title>
 </head>
 
-<h1>hello world</h1>
+<h1 id="title">SEG3125 Lab 1</h1>
 
+<div class="image" >
+  <a href="https://twitch.tv"><img id="image"src="img/TwitchHomepagePlain.JPG" onmouseover="this.src='img/Twitch_homepage.JPG'" onmouseout="this.src='img/TwitchHomepagePlain.JPG'" /></a>
+</div>
 
+</div>
 
 </html>
