Adding a nice style

--- a/index.html
+++ b/index.html
@@ -10,12 +10,34 @@
   <title>UI Survey</title>
 </head>
 
-<h1 id="title">SEG3125 Lab 1</h1>
+<body>
+  <div class="header">
+    <h1 id="title">SEG3125 Lab 1</h1>
+  </div>
 
-<div class="image" >
-  <a href="https://twitch.tv"><img id="image"src="img/TwitchHomepagePlain.JPG" onmouseover="this.src='img/Twitch_homepage.JPG'" onmouseout="this.src='img/TwitchHomepagePlain.JPG'" /></a>
-</div>
+  <div class="image" >
+    <a href="https://twitch.tv"><img id="image"src="img/TwitchHomepagePlain.JPG" onmouseover="this.src='img/TwitchhomepageLoggedIn.JPG'" onmouseout="this.src='img/TwitchHomepagePlain.JPG'" /></a>
 
-</div>
+  </div>
+  <div id="textUnderImage">
+      The first image is the default twitch view, the second picture is the view once you are signed in
+  </div>
+
+
+  <div id="form">
+    
+  </div>
+
+
+  <footer>
+    <p>Designed by Leon Shainski</p>
+  </footer>
+</body>
+
+
+
+
+
+
 
 </html>
