--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <head>
   <script src="main.js"></script>
   <link rel="stylesheet" href="styles.css">
-  <title>UI Survey</title>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <title>UI Survey - SEG3125 Lab 1</title>
 </head>
 
 <body>
@@ -20,13 +21,42 @@
 
   </div>
   <div id="textUnderImage">
-      The first image is the default twitch view, the second picture is the view once you are signed in
+      <i>The first image is the default twitch view, the second picture is the view once you are signed in and with darkmode on</i>
+  </div>
+
+<form>
+  <div class="form" id="question1">
+
+      <h2 class="qTitle">Do you like the fact that the first stream in the recommended streams carousel at the top automatically starts playing when you enter the site?</h2>
+      <input type="radio" id="yes" name="yesorno" value="yes">
+      <label for="yes">Yes</label><br>
+      <input type="radio" id="no" name="yesorno" value="no">
+      <label for="no">No</label><br>
+
+  </div>
+
+  <div class="form" id="question2">
+
+      <h2 class="qTitle">Which of the following additions would you like to see added to Twitch? (select all that apply)</h2>
+      <input type="checkbox" id="Q2Choice1" name="Q2Choice1" value="FriendPreview">
+      <label for="Q2Choice1">A live preview of the streams my friends are watching</label><br>
+      <input type="checkbox" id="Q2Choice2" name="Q2Choice2" value="tagSearch">
+      <label for="Q2Choice2">The ability to search for streams based on tags (for example English, IRL, FPS, etc.)</label><br>
+      <input type="checkbox" id="Q2Choice3" name="Q2Choice3" value="removeRecommended">
+      <label for="Q2Choice3">The ability to remove recommended channels and only be shown the channels you are following</label><br />
+      <input type="checkbox" id="Q2Choice4" name="Q2Choice4" value="themeToggle">
+      <label for="Q2Choice4">A darkmode/lightmode toggle button</label>
+
   </div>
 
 
-  <div id="form">
-    
-  </div>
+
+
+  <form action="/index.html" target="_top">
+  <button class="submit-button" onClick="main()">Submit</button></form>
+</form>
+
+
 
 
   <footer>
