--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>UI Survey - SEG3125 Lab 1</title>
 </head>
 
-<body onload="testFunction()">
+<body>
   <div class="header">
     <h1 id="title">SEG3125 Lab 1</h1>
   </div>
@@ -27,7 +27,7 @@
 <form>
   <div class="form" id="question1">
 
-      <h2>Do you like the fact that the first stream in the recommended streams carousel at the top automatically starts playing when you enter the site?</h2>
+      <h2 class="qTitle">Do you like the fact that the first stream in the recommended streams carousel at the top automatically starts playing when you enter the site?</h2>
       <input type="radio" id="yes" name="yesorno" value="yes">
       <label for="yes">Yes</label><br>
       <input type="radio" id="no" name="yesorno" value="no">
