--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
-
-
 <head>
   <script src="main.js"></script>
   <link rel="stylesheet" href="styles.css">
@@ -51,43 +48,57 @@
 
   <div class="form" id="question3">
 
-      <h2 class="qTitle">Which of the following additions would you like to see added to Twitch? (select all that apply)</h2>
-      <input type="checkbox" id="Q2Choice1" name="Q2Choice1" value="FriendPreview">
-      <label for="Q2Choice1">A live preview of the streams my friends are watching</label><br>
-      <input type="checkbox" id="Q2Choice2" name="Q2Choice2" value="tagSearch">
-      <label for="Q2Choice2">The ability to search for streams based on tags (for example English, IRL, FPS, etc.)</label><br>
-      <input type="checkbox" id="Q2Choice3" name="Q2Choice3" value="removeRecommended">
-      <label for="Q2Choice3">The ability to remove recommended channels and only be shown the channels you are following</label><br />
-      <input type="checkbox" id="Q2Choice4" name="Q2Choice4" value="themeToggle">
-      <label for="Q2Choice4">A darkmode/lightmode toggle button</label>
-
+      <h2 class="qTitle">How would you improve how Twitch recommends new channels on the homepage?</h2>
+      <input type="text" class="Q3textBox" placeholder="Enter Your Answer Here...">
   </div>
 
   <div class="form" id="question4">
-    <h2 class="qTitle">Agree/Disagree: having both a recommended channel carousel at the top of the page as well as a recommended channels section is redundant</h2>
+    <h2 class="qTitle">Please indicate to what level you Agree/Disagree with the following statements:</h2>
+    <h3 id="sliderQuestions"> having both a recommended channel carousel at the top of the page as well as a recommended channels section is redundant</h3>
     <div class="slidecontainer">
       <input type="range" min="1" max="7" value="hello" class="slider" id="myRange" oninput="outputUpdate(value)">
-      <output type="text" for="fader" id="agreementLevel">Neutral</output>
+      <output type="text" for="fader" class="sliderOutputs" id="agreementLevel">Neutral</output>
     </div>
+    <h3 id="sliderQuestions">The Dark theme is incorporated well into Twitch and does not take away from the experience</h3>
+    <div class="slidecontainer">
+      <input type="range" min="1" max="7" value="hello" class="slider" id="myRange" oninput="outputUpdate2(value)">
+      <output type="text" for="fader" class="sliderOutputs" id="agreementLevel2">Neutral</output>
+    </div>
+    <h3 id="sliderQuestions">Upon signing in, the front page should be filled with recommended streams rather than the streams of your followed channels</h3>
+    <div class="slidecontainer">
+      <input type="range" min="1" max="7" value="hello" class="slider" id="myRange" oninput="outputUpdate3(value)">
+      <output type="text" for="fader" class="sliderOutputs" id="agreementLevel3">Neutral</output>
+    </div>
+  </div>
+
+  <div class="form" id = "question 5">
+
+            <h2 class="qTitle">What is your least favourite part of the Twitch UI?</h2>
+             <label class="Q5List">Select one of the following:</label>
+             <select class = "Q5List">
+               <option value = "1">None, it looks clean to me!</option>
+               <option value = "2">The Navigation Bar</option>
+               <option value = "3">The Sidebar</option>
+               <option value = "4">The Recommended Channels Carousel</option>
+             </select>
+
+  </div>
+
+  <div class="form" id="question6">
+      <h2 class="qTitle">Anymore comments/concerns/suggestions?</h2>
+      <input type="text" id="Q6textBox" placeholder="Enter Them Here...">
   </div>
 
 
   <form action="/index.html" target="_top">
   <button class="submit-button" onClick="main()">Submit</button></form>
-</form>
-
-
+  </form>
 
 
   <footer>
     <p>Designed by Leon Shainski</p>
   </footer>
 </body>
-
-
-
-
-
 
 
 </html>
