Minor change made to the first question

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <form>
   <div class="form" id="question1">
 
-      <h2 class="qTitle">Do you like the fact that the first stream in the recommended streams carousel at the top automatically starts playing when you enter the site?</h2>
+      <h2 class="qTitle">Do you like how the recommended streams carousel starts playing a stream as soon as you enter Twitch?</h2>
       <input type="radio" id="yes" name="yesorno" value="yes">
       <label for="yes">Yes</label><br>
       <input type="radio" id="no" name="yesorno" value="no">
