--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 
   </div>
 
+  <div class="form" id="question1b">
+
+      <h2 class="qTitle">Do you prefer dark theme or light theme Twitch? (Hover over the screenshot above to see the dark theme)</h2>
+      <input type="radio" id="dark" name="darkorlight" value="dark">
+      <label for="dark">Dark Theme</label><br>
+      <input type="radio" id="light" name="darkorlight" value="light">
+      <label for="light">Light Theme</label><br>
+
+  </div>
+
   <div class="form" id="question2">
 
       <h2 class="qTitle">Which of the following additions would you like to see added to Twitch? (select all that apply)</h2>
@@ -54,7 +64,7 @@
 
   <div class="form" id="question4">
     <h2 class="qTitle">Please indicate to what level you Agree/Disagree with the following statements:</h2>
-    <h3 id="sliderQuestions"> having both a recommended channel carousel at the top of the page as well as a recommended channels section is redundant</h3>
+    <h3 id="sliderQuestions">Having both a recommended channel carousel at the top of the page as well as a recommended channels section is redundant</h3>
     <div class="slidecontainer">
       <input type="range" min="1" max="7" value="hello" class="slider" id="myRange" oninput="outputUpdate(value)">
       <output type="text" for="fader" class="sliderOutputs" id="agreementLevel">Neutral</output>
