Adding a description to the lab for better understanding

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
   <div class="header">
     <h1 id="title">SEG3125 Lab 1</h1>
+    <p id="underTitleText">This is a survey to gauge opinions on the User Interface (UI) of the popular streaming site <a href="https://twitch.tv"> Twitch.tv</a> </p>
+
   </div>
 
   <div class="image" >
